; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nv40_pm.c_read_clk.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nv40_pm.c_read_clk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_device*, i32)* @read_clk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_clk(%struct.drm_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %13 [
    i32 3, label %7
    i32 2, label %10
  ]

7:                                                ; preds = %2
  %8 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %9 = call i32 @read_pll_2(%struct.drm_device* %8, i32 16384)
  store i32 %9, i32* %3, align 4
  br label %15

10:                                               ; preds = %2
  %11 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %12 = call i32 @read_pll_1(%struct.drm_device* %11, i32 16392)
  store i32 %12, i32* %3, align 4
  br label %15

13:                                               ; preds = %2
  br label %14

14:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %10, %7
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @read_pll_2(%struct.drm_device*, i32) #1

declare dso_local i32 @read_pll_1(%struct.drm_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
